# model/constant.go
@@ -1,5 +1,7 @@
 package model
 
+import "time"
+
 // log-level
 var (
 	LogLevel      = "log-level"
@@ -32,14 +34,17 @@ var (
 )
 
 var (
-	NewServer  = "new-server"
-	NewStore   = "new-store"
-	CreateUser = "create-user"
-	GetUsers = "get-users"
+	NewServer       = "new-server"
+	NewStore        = "new-store"
+	CreateUser      = "create-user"
+	GetUsers        = "get-users"
 	GetUserByFilter = "get-user-by-filter"
-	GetUserByID = "get-user-by-id"
-	UpdateUser = "update-user"
-	DeleteUser = "delete-user"
+	GetUserByID     = "get-user-by-id"
+	UpdateUser      = "update-user"
+	DeleteUser      = "delete-user"
+	SignUP          = "signup"
+	SignIn          = "signin"
+	AuthMiddleware  = "authmiddleware"
 )
 
 var (
@@ -51,11 +56,23 @@ var (
 
 	Authorization = "X-Token"
 
-	DNS = "host=localhost user=vishal password=password dbname=manage port=5432 sslmode=disable"
+	DNS = "host=localhost user=yash1 password=password1 dbname=project1 port=5432 sslmode=disable"
 
 	DataPerPage = "limit"
 	PageNumber  = "page"
 	StartDate   = "start_date"
 	EndDate     = "end_date"
 	TimeLayout  = "2006-01-02 15:04:05.000 -0700"
+)
+
+var (
+	TokenExpiration = time.Hour * 24
+)
+
+var SecretKey = []byte("college-management-key")
+
+var (
+	SuperAdminUser = "superadmin"
+	AdminUser =  "adminuser"
+	NormalUser = "normaluser"
 )
